updare post,delete

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=http://localhost:3000
-VITE_AUTH0_DOMAIN=your-auth0-domain.auth0.com
-VITE_AUTH0_CLIENT_ID=your-client-id
+VITE_API_BASE_URL=VITE_API_BASE_URL=https://order-tracker-api
+VITE_AUTH0_DOMAIN=dev-xawdg2hzuuwg04a8.us.auth0.com
+VITE_AUTH0_CLIENT_ID=bp7U3WHyxyIKh9EAWzjHp32DgrpSRjbF
